<resources>
    <string name="app_name">Cartas VS humanidad</string>
    <string name="usuario">User</string>
    <string name="email">Email</string>
    <string name="contrasena">Password</string>
    <string name="Acceder">Login</string>
    <string name="NoTienesCuenta"><u>Not a member?</u></string>
    <string name="Atencion">Warning!</string>
    <string name="Aviso">This game contains sensitive content that some people may find offensive or disturbing. If you are a person sensitive to these contents, we recommend that you stop playing.</string>
    <string name="confirmarContrasena">Confirm password</string>
    <string name="crearCuenta">Register</string>
    <string name="cancelar">Cancel</string>
    <string name="NoRecuerdas"><u>Forgot password?</u></string>
    <string name="EmailRecuperar">Enter the email of the password you want to recover</string>
    <string name="Aceptar">Agree</string>
    <string name="Confirmar">Confirm</string>
</resources>