<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Registro">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/usuario"
        android:textColor="@color/LetraPrincipal"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsuario"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/style_border_editext"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="Example98"
        android:inputType="textPersonName"
        android:textColor="@color/LetraSecundaria"
        android:textColorHint="@color/LetraSecundaria"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvRegisterEmail"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUsuario"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal"
        android:text="@string/email"
        android:textColor="@color/LetraPrincipal"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/txtRegisterEmail"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRegisterEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/style_border_editext"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:gravity="center|center_vertical"
        android:hint="example@example.com"
        android:inputType="textEmailAddress"
        android:textColor="@color/LetraSecundaria"
        android:textColorHint="@color/LetraSecundaria"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvRegisterPassword"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtRegisterEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/contrasena"
        android:textColor="@color/LetraPrincipal"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/txtRegisterPassword"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRegisterPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/style_border_editext"
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:inputType="textPassword"
        android:textColor="@color/LetraSecundaria"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtRegisterPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/confirmarContrasena"
        android:textColor="@color/LetraPrincipal"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/txtPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPassword2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/style_border_editext"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:inputType="textPassword"
        android:textColor="@color/LetraSecundaria"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/txtPassword2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/style_border_editext"
        android:backgroundTint="@color/LetraSecundaria"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/crearCuenta"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/btnRegistrar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/style_border_editext"
        android:backgroundTint="@color/LetraPrincipal"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:onClick="cancelar"
        android:text="@string/cancelar"
        android:textSize="24sp" />

</RelativeLayout>