<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RecuperarPass">

    <ImageView
        android:id="@+id/imglogo2"
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvRecuperarEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imglogo2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/EmailRecuperar"
        android:textColor="@color/LetraPrincipal"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/txtRecuperarEmail"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_below="@+id/tvRecuperarEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/style_border_editext"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="example@example.com"
        android:inputType="textEmailAddress"
        android:textColor="@color/LetraSecundaria"
        android:textColorHint="@color/LetraSecundaria"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/txtRecuperarEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/style_border_editext"
        android:backgroundTint="@color/LetraSecundaria"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/Confirmar"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnCancelar2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/btnConfirmar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/style_border_editext"
        android:backgroundTint="@color/LetraPrincipal"
        android:fontFamily="@font/acme"
        android:onClick="Cancelar"
        android:text="@string/cancelar"
        android:textSize="24sp" />
</RelativeLayout>